salesforce/force-app/main/default/objects/TrustScore__c/TrustScore__c.object-meta.xml
<CustomObject>
    <description>Phase 15c — Per-detector confidence score. One row per DetectorId; updated by TrustScoreService.recompute() after each scan. Surfaces detector reliability so the AI Remediation Plan can downweight low-trust detectors.</description>
    <label>Trust Score</label>
    <pluralLabel>Trust Scores</pluralLabel>
    <nameField>
        <label>Detector Id</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>