salesforce/force-app/main/default/objects/TrustScore__c/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>