salesforce/force-app/main/default/objects/TrustScore__c/fields/FindingCount__c.field-meta.xml
<CustomField>
    <fullName>FindingCount__c</fullName>
    <label>Findings Surfaced</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>