salesforce/force-app/main/default/objects/TrustScore__c/fields/LastComputedAt__c.field-meta.xml
<CustomField>
    <fullName>LastComputedAt__c</fullName>
    <label>Last Computed At</label>
    <type>DateTime</type>
</CustomField>