salesforce/force-app/main/default/objects/TrustScore__c/fields/RecoveredCount__c.field-meta.xml
<CustomField>
    <fullName>RecoveredCount__c</fullName>
    <label>Recoveries Verified</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>