salesforce/force-app/main/default/objects/TrustScore__c/fields/RegressedCount__c.field-meta.xml
<CustomField>
    <fullName>RegressedCount__c</fullName>
    <label>Regressed After Commit</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>