salesforce/force-app/main/default/objects/TrustScore__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Trust Score</label>
    <description>Composite 0.00 - 1.00 reliability score for this detector.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>