salesforce/force-app/main/default/objects/TrustScore__c/fields/SuppressedCount__c.field-meta.xml
<CustomField>
    <fullName>SuppressedCount__c</fullName>
    <label>False Positives (Suppressed)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>